--- a/driver.html
+++ b/driver.html
@@ -30,7 +30,16 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+        ga('create', 'UA-81131542-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </head>
 
 <body id="page-top" class="index">
@@ -46,7 +55,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Siesta PHP</a>
+                <a class="navbar-brand" href="#page-top">Siesta</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,19 +65,22 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/index.html">Overview</a>
+                        <a href="index.html">Overview</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/entities.html">Entities</a>
+                        <a href="entities.html">Entities</a>
                     </li>
                     <li class="page-scroll">
                         <a href="/relationships.html">Relationships</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/storedprocedure.html">Stored Procedures</a>
+                        <a href="storedprocedure.html">Stored Procedures</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/driver.html">Driver</a>
+                        <a href="driver.html">Driver</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="generator.html">Custom Generator</a>
                     </li>
                 </ul>
             </div>
@@ -153,7 +165,7 @@ try {
 
     ...
 
-    $resultSet = $connection->query("SELECT * FROM ABC");
+    $resultSet = $connection->query("UPDATE ...");
 
 
     $connection->commit();
@@ -185,7 +197,7 @@ try {
                         </p>
 
                         <pre class="prettyprint">
-    $resultSet = Artist::getMyCustomList("Parameter1", "parameter2");
+    $resultSet = $artistService->getMyCustomList("Parameter1", "parameter2");
 
     // hasNext() method will tell if there is another row available.
     while($resultSet->hasNext()) {
